# CLI-Game-Collection-App

./: .gitignore  README.md  display_menu.py  main.py  menu.py  pyproject.toml
app/: menu.py
auth/: password.py  session.py
controllers/: user.py
data/: archive.db
db/: connection.py  migration.py
db/migrations/: v0_initialize.py  v1_create_game_sessions.py  v1_create_users.py
games/: base.py  sample_game.py
games/game1/: game.py
models/: game_session.py  user.py
repositories/: game_session.py  user.py
services/: user.py
utils/: display.py  game_helper.py  game_session_tracker.py  menu.py  session.py  validation.py
