[project]
name = "cli-game-collection-app"
version = "0.1.0"
description = "A collection of different game in one place"
authors = [
    {name = "Chinedu Ekene Okpala",email = "allstackdev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "blessed (>=1.20.0,<2.0.0)",
    "pyfiglet (>=1.0.2,<2.0.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "prompt-toolkit (==3.0.43)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
